fix: height of last div on the left to align it with right side

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ main {
     width: 6rem;
 }
 
-.speed {
+#left > div:nth-child(5) {
     height: 100%
 }
 
